2004-03-30  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3604391>: Plug-in context menus (Flash) don't work in Carbon WebKit applications (e.g., CarbonWeb)

        Reviewed by rjw.

        * Carbon.subproj/HIWebView.m:
        (ContextMenuClick): instead of calling menuForEvent (which is not implemented on our plug-in view) call rightMouseDown and let AppKit handle the rest

2004-03-29  John Sullivan  <sullivan@apple.com>

        - some support for "Stealth Browsing"; add a preference that
        controls whether a history item is added when a page is visited.
        This is called "historyIsFrozen" for now, but I wouldn't be
        surprised to see this name change.

        Reviewed by Dave.

        * WebView.subproj/WebPreferencesPrivate.h:
        new historyIsFrozen, setHistoryIsFrozen: methods
        
        * WebView.subproj/WebPreferences.m:
        new WebKitHistoryIsFrozenPreferenceKey
        (+[WebPreferences initialize]):
        set initial value of WebKitHistoryIsFrozenPreferenceKey
        (-[WebPreferences setHistoryIsFrozen:]):
        set value of WebKitHistoryIsFrozenPreferenceKey
        (-[WebPreferences historyIsFrozen]):
        read value of WebKitHistoryIsFrozenPreferenceKey

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _transitionToCommitted:]):
        don't add item to history if history is frozen

2004-03-29  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed <rdar://problem/3559178>: navigator.language always returns "en"

        * WebCoreSupport.subproj/WebViewFactory.m: (-[WebViewFactory defaultLanguageCode]):
        Call +[NSUserDefaults _web_preferredLanguageCode] rather than returning "en".

        * English.lproj/StringsNotToBeLocalized.txt: Updated for recent changes.

2004-03-26  John Sullivan  <sullivan@apple.com>

        - fixed <rdar://problem/3576334>: Printing "empty" page gives print error, 
        leaves browser window UI broken

        Reviewed by Dave.