@@ -1,3 +1,7 @@
+2004-03-31  Darin Adler  <darin@apple.com>
+
+        * WebView.subproj/WebHTMLView.m: Whitespace tweaks.
+
 2004-03-30  Chris Blumenberg  <cblu@apple.com>
 
 	Fixed: <rdar://problem/3604391>: Plug-in context menus (Flash) don't work in Carbon WebKit applications (e.g., CarbonWeb)
